Fix spacing

--- a/assets/post-273883.css
+++ b/assets/post-273883.css
@@ -769,7 +769,7 @@
   --margin-bottom: 0px;
   --margin-left: 0px;
   --margin-right: 0px;
-  --padding-top: 10%;
+  --padding-top: 30%;
   --padding-bottom: 20%;
   --padding-left: 8%;
   --padding-right: 8%;
@@ -1051,7 +1051,7 @@
   --margin-bottom: 0px;
   --margin-left: 0px;
   --margin-right: 0px;
-  --padding-top: 10%;
+  --padding-top: 30%;
   --padding-bottom: 20%;
   --padding-left: 8%;
   --padding-right: 8%;
@@ -2733,7 +2733,7 @@ body.elementor-page-273883
     --flex-wrap-mobile: wrap;
     --align-items: center;
     --padding-top: 12%;
-    --padding-bottom: 0;
+    --padding-bottom: 12%;
     --padding-left: 8%;
     --padding-right: 8%;
   }
